# code-continuum

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mcp-neo4j-test.sh  mcp-test.sh
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: retrodoc.md
.claude/commands/: seq-diagram.md
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
doc/: RETRODOC.md  RETRODOC_GENERATED.md  SCHEMA.md  SCHEMA_IA.md  sample_seq_slash_commands.md  sample_seq_slash_commands_old.md
examples/: README.md
examples/config/: app.xml  portlet.xml
examples/jsp_transitive_include/: README.md
examples/servlet_test/: web.xml
examples/web_templates/: dynamic_js_script.jsp  index.jsp  user_profile.jspx
examples/websphere-portal/: ANALYSIS.md  INDEX.md  PHASE1_SUMMARY.md  README.md  ROADMAP.md  SEMANTIC_MODEL.md  STATUS_DEV.md  TESTING_GUIDE.md  USECASES.md  USECASE_01_USER_MANAGEMENT.md  USECASE_02_DOCUMENT_MANAGEMENT.md  USECASE_03_DASHBOARD.md  USECASE_04_WORKFLOW.md  USECASE_05_REPORTS.md  application-context.xml  application.properties  portlet.xml  web.xml
production/: .env.example  .mcp.json  docker-compose.yml  mcp-test.sh
production/.claude/: settings.local.json
scripts/: deploy.sh  stop-all.sh
src/: lib.rs  main.rs
src/analysis/: executor.rs  mod.rs
src/cli/: mod.rs
src/config/: mod.rs  package_filter.rs
tests/: README.md  integration_debug.rs  integration_e2e.rs  integration_extraction.rs  integration_mcp.rs  integration_neo4j.rs
(+154 files in other folders)
