[package]
name = "code-continuum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.20"
tree-sitter-graph = "0.11"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-java = "0.20"
tree-sitter-html = "=0.20.0"
tree-sitter-cobol = { git = "https://github.com/yutaro-sakamoto/tree-sitter-cobol", package = "tree-sitter-COBOL" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
neo4rs = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chardetng = "0.1"
encoding_rs = "0.8"
chrono = { version = "0.4", default-features = true }
anyhow = "1.0"
regex = "1.10"  # Pour les extracteurs WebSphere Portal (JSP, XML)
axum = { version = "0.7", features = ["json"] }
tower = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3"
